# csp-header-generator

./: .detect-secrets.json  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  ROADMAP.md  cliff.toml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  security.yml
app/: cli.py  csp_generator.py  utils.py
docs/: conf.py  index.rst
hashcsp/: __init__.py  cli.py  csp_generator.py  utils.py
hashcsp/commands/: fetch.py  generate.py  validate.py
hashcsp/core/: config.py  csp_generator.py  init.py  local_scanner.py  logging_config.py  printer.py  remote_fetcher.py
hashcsp/logs/: .gitkeep  .txt
hashcsp/tests/: test_config.py  test_csp_generator.py  test_local_scanner.py  test_logging_config.py  test_remote_fetcher.py
tests/: __init__.py  test_csp_generator.py
