[project]
name = "hashcsp"
version = "1.0.0"
description = "Interactive CLI tool to generate secure Content Security Policy headers"
authors = [
    {name = "Ameen AB."}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer (>=0.15.2,<0.16.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "rich (>=14.0.0,<15.0.0)",
    "playwright (>=1.51.0,<2.0.0)",
    "pydantic (>=2.11.3,<3.0.0)"
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
ruff = "^0.6.9"
black = "^24.8.0"
isort = "^5.13.2"
mypy = "^1.11.2"
types-requests = "^2.32.0.20250328"
safety = "^3.2.7"
detect-secrets = "^1.5.0"
pytest-cov = "^5.0.0"
types-beautifulsoup4 = "^4.12.0.20250204"
anyio = "^4.9.0,<5.0.0"
pytest-asyncio = "^0.26.0"
pytest-tornasync = "^0.6.0.post2"
pytest-trio = "^0.8.0"
pytest-twisted = "^1.14.3"
twisted = "^24.11.0"
bandit = "^1.8.3"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true


[tool.poetry.scripts]
hashcsp = "hashcsp.cli:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"